fixes including images on impact page and blog spacing on homepage

--- a/src/_resources/scss/components/_post.scss
+++ b/src/_resources/scss/components/_post.scss
@@ -18,7 +18,9 @@
 }
 
 .post__item {
+  display: block;
   text-decoration: none;
+  margin-bottom: 2 * $base-spacing;
 
   &__title {
     margin-bottom: 0;
